// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Section checkGrammar 1`] = `
<Div
  checkGrammar={true}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkGrammar 2`] = `
<Div
  checkGrammar={false}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkGrammar 3`] = `
<Div
  checkGrammar={false}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkGrammar 4`] = `
<Div
  checkGrammar={true}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkHighlight 1`] = `
<Div
  checkHighlight={true}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkHighlight 2`] = `
<Div
  checkHighlight={false}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkHighlight 3`] = `
<Div
  checkHighlight={false}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkHighlight 4`] = `
<Div
  checkHighlight={true}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkSpaces 1`] = `
<Div
  checkSpaces={true}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkSpaces 2`] = `
<Div
  checkSpaces={false}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkSpaces 3`] = `
<Div
  checkSpaces={false}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section checkSpaces 4`] = `
<Div
  checkSpaces={true}
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section className 1`] = `
<Div
  className="uu5-bricks-section my-classname"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 1`] = `
<Div
  className="color-schema-default uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 2`] = `
<Div
  className="color-schema-red uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 3`] = `
<Div
  className="color-schema-red uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 4`] = `
<Div
  className="color-schema-red-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 5`] = `
<Div
  className="color-schema-red-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 6`] = `
<Div
  className="color-schema-green uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 7`] = `
<Div
  className="color-schema-green uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 8`] = `
<Div
  className="color-schema-green-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 9`] = `
<Div
  className="color-schema-green-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 10`] = `
<Div
  className="color-schema-yellow uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 11`] = `
<Div
  className="color-schema-yellow uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 12`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 13`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 14`] = `
<Div
  className="color-schema-purple uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 15`] = `
<Div
  className="color-schema-purple uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 16`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 17`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 18`] = `
<Div
  className="color-schema-brown uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 19`] = `
<Div
  className="color-schema-brown uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 20`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 21`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 22`] = `
<Div
  className="color-schema-orange uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 23`] = `
<Div
  className="color-schema-orange uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 24`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 25`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 26`] = `
<Div
  className="color-schema-cyan uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 27`] = `
<Div
  className="color-schema-cyan uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 28`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 29`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 30`] = `
<Div
  className="color-schema-grey uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 31`] = `
<Div
  className="color-schema-grey uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 32`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 33`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 34`] = `
<Div
  className="color-schema-pink uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 35`] = `
<Div
  className="color-schema-pink uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 36`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 37`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section colorSchema 38`] = `
<Div
  className="color-schema-pink uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section content 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  12345
</Div>
`;

exports[`UU5.Bricks.Section content 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Div>
`;

exports[`UU5.Bricks.Section content 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Div>
`;

exports[`UU5.Bricks.Section content 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  12345
</Div>
`;

exports[`UU5.Bricks.Section controlled 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section controlled 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section controlled 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section controlled 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section default props 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section disabled 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section disabled 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section disabled 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section disabled 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section docKit examples UU5.Bricks.Section should render without crash 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Infrastructure"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-header"
    ignoreInnerHTML={false}
    key="uuID-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Robust and reliable hardware and software infrastructure, whether your own or in the cloud, is essential for the operation of information systems and all other application software equipment. Also of importance is the management of infrastructure security linked with to access of users to the company’s ICT environment and data. The fulfilment of the company’s business plan depends on choosing the right components for ICT infrastructure, deploying them quickly with optimum settings, and ensuring secure and continued operation. Unicorn has long-term experience with the delivery of ICT infrastructures and cloud services for the operation of information systems. Based on this experience, we are able to find and deliver optimum solutions both for new and existing customers. Our solutions have a great value to expense ratio. Because we are not dependent on any system vendor, we are always able to select the most suitable solution for each situation."
  />
  <Footer
    className={null}
    content="Author: www.unicorn.com"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-footer"
    ignoreInnerHTML={false}
    key="uuID-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</Div>
`;

exports[`UU5.Bricks.Section dynamic 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section dynamic 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section dynamic 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section dynamic 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section footer 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <Footer
    className={null}
    content={
      <div>
        Footer of section
      </div>
    }
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-footer"
    ignoreInnerHTML={false}
    key="uuID-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</Div>
`;

exports[`UU5.Bricks.Section header 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <Header
    className={null}
    colorSchema={null}
    content={
      <div>
        Header of section
      </div>
    }
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-header"
    ignoreInnerHTML={false}
    key="uuID-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Div>
`;

exports[`UU5.Bricks.Section hidden 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section hidden 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section hidden 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section hidden 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section id 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="myId"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section ignoreHTML 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section ignoreHTML 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section ignoreHTML 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section ignoreHTML 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={0}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 5`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 6`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 7`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 8`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 9`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 10`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 11`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 12`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 13`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 14`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="0"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 15`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="0"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 16`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="1"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 17`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="1"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 18`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="2"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 19`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="2"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 20`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="3"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 21`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="3"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 22`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="4"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 23`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="4"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 24`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 25`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 26`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="6"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 27`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="6"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section level 28`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section mainAttrs 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section name 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 5`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 6`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 7`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 8`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 9`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 10`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 11`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 12`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 13`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 14`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Section nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Section nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Section nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Section nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Section nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Section noIndex 1`] = `
<Div
  className="uu5-bricks-section uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section noIndex 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section noIndex 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section noIndex 4`] = `
<Div
  className="uu5-bricks-section uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section pureRender 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section pureRender 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section pureRender 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section pureRender 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section selected 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section selected 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section selected 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section selected 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section style 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section style 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section style 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section style 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section textCorrector 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={true}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section textCorrector 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={false}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section textCorrector 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={false}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section textCorrector 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={true}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section tooltip 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
/>
`;

exports[`UU5.Bricks.Section underline 1`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section underline 2`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section underline 3`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Section underline 4`] = `
<Div
  className="uu5-bricks-section"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;
